feat: add auth (#2)
### tl;dr

- [x] Adds sign in/sign up
- [x] Adds public/private layouts
- [x] Adds public/private navs
- [x] Fixes memory leak caused in landing page `createEffect`

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 
 body {
-  @apply bg-brand-black text-white;
+  @apply bg-zinc-900 bg-opacity-95 text-white tracking-wider;
 }
 
 @tailwind components;
@@ -20,6 +20,10 @@ body {
 
 .cell:last-of-type {
   @apply border-b-2 border-green-500;
+}
+
+.input:focus-within label {
+  @apply text-green-500 opacity-100;
 }
 
 @tailwind utilities;
